--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "combo for node",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "start": "node index.js",
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
