--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "combo for node",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,6 +14,6 @@
     "combo",
     "node"
   ],
-  "author": "kevin.zhong",
+  "author": "willworks",
   "license": "MIT"
 }
